--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body{
     top: 0;
     width: 100%;
     z-index: 1;
+    font-family: "Montserrat", sans-serif;
+    
 }
 .item{
     color:#efd3a2;
@@ -32,6 +34,10 @@ body{
     margin: 50px;
     display: flex;
     justify-content: center;
+    font-family: "Montserrat", sans-serif;
+    text-transform: uppercase;
+    font-size: 30px;
+    color:#4F200D;
   }
 .logo{
     
@@ -47,3 +53,29 @@ video {
     left: 0;
     z-index: -1;
   }
+h3{
+  color:#4F200D;
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+}
+.section-header{
+  display: flex;
+  justify-content: center;
+}
+.heading{
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+}
+.section-about{
+        display: flex;
+        justify-content: space-around;
+        padding: 60px;
+        background-color: #F0F0F0;
+
+}
+.about-us{
+  align-self: center;
+  padding: 12px;
+  font-family: "Montserrat", sans-serif;
+  color:#4F200D;
+}
